RustInvest/src/routes/snapshots/wallet_live__routes__api__tests__create_asset.snap
---
source: src/routes/api.rs
assertion_line: 143
expression: new_asset
---
{
  "id": 1,
  "name": "Bitcoin",
  "unit_value": 10.0,
  "quantity": 100.0
}
