RustInvest/src/routes/snapshots/wallet_live__routes__api__tests__list_assets.snap
---
source: src/routes/api.rs
assertion_line: 153
expression: assets
---
[
  {
    "id": 1,
    "name": "Bitcoin",
    "unit_value": 10.0,
    "quantity": 50.0
  }
]
