RustInvest/src/routes/snapshots/wallet_live__routes__api__tests__update_asset.snap
---
source: src/routes/api.rs
assertion_line: 174
expression: updated_asset
---
{
  "id": 1,
  "name": "Ethereum",
  "unit_value": 20.0,
  "quantity": 50.0
}
